:bug: (background) hide triangle background on mobile

--- a/app/components/backgrounds/TriangleBackground/TriangleBackground.module.scss
+++ b/app/components/backgrounds/TriangleBackground/TriangleBackground.module.scss
@@ -30,6 +30,10 @@
 		display: none;
 	}
 
+	@media (max-width: #{$resumeWidth}) {
+		display: none;
+	}
+
 	&::after {
 		position: fixed;
 		display: block;
